--- a/docs/kluez-sortable.css
+++ b/docs/kluez-sortable.css
@@ -1,11 +1,24 @@
 .scoreboard {
   width: 100%;
-  height: 600px;
-  margin: 20px auto;
-  overflow-y: auto;
+  /* height: 600px; */
+  /* height: 100%; */
+  /* margin: 20px auto; */
+  /* overflow-y: auto; */
   background-color: #dff;
   padding: 20px 20px 10px 20px;
   border: 1px solid #9ff;
+  border-radius: 3px;
+}
+
+.kluez-board {
+  width: 100%;
+  min-height: 50px;
+  /* height: 100%; */
+  /* margin: 20px auto; */
+  /* overflow-y: auto; */
+  background-color: rgb(221, 255, 223);
+  padding: 20px 20px 10px 20px;
+  border: 1px solid rgb(168, 255, 153);
   border-radius: 3px;
 }
 
@@ -18,6 +31,25 @@
   cursor: move;
 }
 
+.kl-goal {
+  display: block ruby;
+  position: relative;
+}
+
+.box {
+  border: 1px solid pink;
+}
+
+.kl-box {
+  position: relative;
+  left: 0px;
+  transition: left 2s;
+  border: 1px solid rgb(255, 153, 235);
+  background-color: rgb(252, 191, 240);
+  border-radius: 2px;
+  padding: 2px;
+}
+
 .group {
   background-color: #ffd;
   padding: 10px;
@@ -25,12 +57,12 @@
   margin-bottom: 10px;
   border-radius: 3px;
   cursor: move;
+}
 
-  &__goals {
-    min-height: 40px;
-    padding: 10px 10px 0 10px;
-    border: 2px dashed;
-  }
+.group__goals {
+  min-height: 40px;
+  padding: 10px 10px 0 10px;
+  border: 2px dashed;
 }
 
 .sortable-ghost {
