--- a/docs/kluez-sortable.css
+++ b/docs/kluez-sortable.css
@@ -10,6 +10,11 @@
   border-radius: 3px;
 }
 
+#wrapper {
+  border: 1px solid pink;
+  background-color: rgb(255, 221, 235);
+}
+
 .kluez-board {
   width: 100%;
   min-height: 50px;
@@ -67,4 +72,28 @@
 
 .sortable-ghost {
   opacity: 0.2;
+}
+
+/* // ____________________________________ focus ____________________________________ */
+.form-controle-focus {
+  inline-size: min-content;
+  display: block;
+  /* width: 100%; */
+  padding: 0.375rem 0.75rem;
+  /* font-size: 1rem; */
+  font-weight: 100;
+  line-height: 1.5;
+  color: #212529;
+  background-color: transparent;
+  background-clip: padding-box;
+  border: 1px solid transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.375rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.form-controle-focus:focus {
+  border: 1px solid #ced4da;
+  background-color: #fff;
 }
