--- a/docs/kluez-sortable.css
+++ b/docs/kluez-sortable.css
@@ -1,3 +1,10 @@
+.container-code {
+  border: 1px solid silver;
+  padding: 5px;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
 .scoreboard {
   width: 100%;
   /* height: 600px; */
